@@ -5,6 +5,8 @@
 	(setMaxIntAsYYYYMMDD): New (unexported but R-accessible) helper to
 	set the cutoff value, leaving default at 29991231
 
+	* tests/gh_issue_56.R: Added simple test script
+
 2017-02-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.1
